--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^16.2.0",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.2.0",
+    "recompose": "^0.26.0",
     "spectacle": "^4.0.0",
     "style-loader": "0.19.0",
     "styled-components": "^3.1.6",
