--- a/package.json
+++ b/package.json
@@ -26,17 +26,19 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "modern-normalize": "^0.4.0",
     "normalize.css": "7.0.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "prop-types": "^15.6.1",
     "raf": "3.4.0",
     "react": "^16.2.0",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.2.0",
     "recompose": "^0.26.0",
-    "spectacle": "^4.0.0",
+    "spectacle": "^4.1.0",
     "style-loader": "0.19.0",
     "styled-components": "^3.1.6",
     "sw-precache-webpack-plugin": "0.11.4",
